--- a/files/babbler.css
+++ b/files/babbler.css
@@ -1,5 +1,6 @@
 body {
 	background-color: #cfc;
+	font-family: Arial, Helvetica, sans-serif;
 }
 
 li {
@@ -11,7 +12,7 @@ li:hover {
 	background-color: #ffffdd;
 }
 
-li.user {
+.user {
 	font-weight: bold;
 }
 
@@ -20,9 +21,17 @@ li.user {
 	color: white;
 }
 
+#container {
+	position: relative;
+	width: 800px;
+	margin: 0 auto;
+	padding-top: 25px;
+}
+
 #main {
 	min-width: 600px;
 	height: 450px;
+	font-size: 12px;
 }
 
 #users {
@@ -55,13 +64,13 @@ li.user {
 
 #prompt {
 	margin-top: 20px;
-	width: 85%;
-	min-width: 150px;
+	min-width: 400px;
 	height: 30px;
 }
 
 #send {
 	height: 30px;
+	width: 50px;
 }
 
 #panel {
@@ -75,5 +84,6 @@ li.user {
 #togglepanel {
 	position: absolute;
 	top: 0;
-	right: 20px;
+	right: 5px;
+	height: 50px;
 }
