--- a/files/babbler.css
+++ b/files/babbler.css
@@ -49,7 +49,7 @@ li:hover {
 	margin: 0;
 	height: 100%;
 	min-width: 400px;
-	border: 1px solid black;
+	border: 1px solid gray;
 	overflow-y: scroll;
 	background-color: white;
 }
