--- a/files/babbler.css
+++ b/files/babbler.css
@@ -30,7 +30,7 @@ li:hover {
 
 #main {
 	min-width: 600px;
-	height: 450px;
+	height: 250px;
 	font-size: 12px;
 }
 
@@ -66,6 +66,7 @@ li:hover {
 	margin-top: 20px;
 	min-width: 400px;
 	height: 30px;
+	padding-left: 5px;
 }
 
 #send {
